--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --very-dark-desaturated-blue: hsl(229, 23%, 23%);
     --dark-grayish-blue:  hsl(227, 10%, 46%);
     --dark-gray: hsl(0, 0%, 59%);
+    --light-gray: hsl(0, 0%, 90%);
 }
 
 * {
@@ -97,7 +98,7 @@ main header img {
 
 .stats {
     display: flex;
-    border-top: 1px solid var(--dark-gray);
+    border-top: 1px solid var(--light-gray);
     padding: 25px;
 }
 .stat {
@@ -110,7 +111,7 @@ main header img {
 }
 .stat h2 {
     font-weight: 400;
-    font-size: .6rem;
+    font-size: .55rem;
     color: var(--dark-grayish-blue);
     letter-spacing: 1px;
 }
